--- a/components/Criteria.module.css
+++ b/components/Criteria.module.css
@@ -1,5 +1,7 @@
 .criteriaContianer {
-  display: flex;
   font-weight: bold;
+  display: flex;
   flex-wrap: wrap;
+  align-items: center;
+  justify-content: center;
 }
