--- a/components/Departments.module.css
+++ b/components/Departments.module.css
@@ -1,3 +1,6 @@
 .departmentsContainer {
   display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: center;
 }
